css/helpers.css
@import url('https://fonts.googleapis.com/css?family=Libre+Baskerville:400i'); /* Usage: font-family: 'Libre Baskerville', serif; */
@import url('https://fonts.googleapis.com/css?family=Roboto'); /* Usage: font-family: 'Roboto', sans-serif; */
@font-face {
    font-family: 'im_fell_great_primerregular';
    src: url('../font/im-fell-great-primer-roman.woff2') format('woff2'),
         url('../font/im-fell-great-primer-roman.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}

/* Padding 10px */
.override .p-d { padding: 10px; }
.override .p-t { padding-top: 10px; }
.override .p-b { padding-bottom: 10px; }
.override .p-l { padding-left: 10px; }
.override .p-r { padding-right: 10px; }
.override .p-lr { padding-left: 10px; padding-right: 10px; }
.override .p-tb { padding-top: 10px; padding-bottom: 10px; }
.override .p-0 { padding: 0; }

/* Padding 20px */
.override .pl-d { padding: 20px; }
.override .pl-t { padding-top: 20px; }
.override .pl-b { padding-bottom: 20px; }
.override .pl-l { padding-left: 20px; }
.override .pl-r { padding-right: 20px; }
.override .pl-lr { padding-left: 20px; padding-right: 20px; }
.override .pl-tb { padding-top: 20px; padding-bottom: 20px; }

/* Margin 10px */
.override .m-0 { margin: 0; }
.override .m-d { margin: 10px; }
.override .m-t { margin-top: 10px; }
.override .m-b { margin-bottom: 10px; }
.override .m-l { margin-left: 10px; }
.override .m-r { margin-right: 10px; }
.override .m-lr { margin-left: 10px; margin-right: 10px; }
.override .m-tb { margin-top: 10px; margin-bottom: 10px; }

/* Margin 20px */
.override .ml-d { margin: 20px; }
.override .ml-t { margin-top: 20px; }
.override .ml-b { margin-bottom: 20px; }
.override .ml-l { margin-left: 20px; }
.override .ml-r { margin-right: 20px; }
.override .ml-lr { margin-left: 20px; margin-right: 20px; }
.override .ml-tb { margin-top: 20px; margin-bottom: 20px; }

/* Borders */
.override .b-0 { border: 0; }
.override .b-d { border: 1px solid #ddd; }
.override .b-t { border-top: 1px solid #ddd; }
.override .b-r { border-right: 1px solid #ddd; }
.override .b-b { border-bottom: 1px solid #ddd; }
.override .b-l { border-left: 1px solid #ddd; }
.override .bl-t, .bl-t-nh { border-top: 4px solid #ddd; }
.override .bl-t:hover, .bl-t-h { border-top: 4px solid #1C79DA; }

/* Displays */
.override .d-i { display: inline; }
.override .d-ib { display: inline-block; }
.override .d-b { display: block; }
.override .d-n { display: none; }
.override .d-tc { display: table-cell; }

/* Text Color Accents */
.override .a-1 { color: #F36519; }

/* Floats */
.override .fl-l { float: left; }
.override .fl-r { float: right; }
.override .fl-n { float: none; }

/* Font Styles */
.override .f-b { font-weight: bold; }
.override .f-i { font-style: italic; }
.override .f-n { font-style: none; font-weight: none; text-decoration: none; }

/* Positions */
.override .pn-r { position: relative; }
.override .pn-a { position: absolute; }
.override .pn-s { position: static; }

/* Colors */
.override .fc-w { color: #fff; }
.override .fc-b { color: #000; }
.override .fc-br { color: #C3A75E; }
.override .fc-bl { color: #0C71B1; }
.override .fc-g { color: #006464; }

.override .c-p { cursor: pointer; }
.override .a-s { -webkit-box-shadow: 0px 4px 10px 0px rgba(0,0,0,0.56); -moz-box-shadow: 0px 4px 10px 0px rgba(0,0,0,0.56); box-shadow: 0px 4px 10px 0px rgba(0,0,0,0.56);}
.override .a-s-h:hover { -webkit-box-shadow: 0px 3px 20px 5px rgba(9,119,119,0.7); -moz-box-shadow: 0px 3px 20px 5px rgba(9,119,119,0.7); box-shadow: 0px 3px 20px 5px rgba(9,119,119,0.7);}
.override .a-o:hover { opacity: 0.7; filter: alpha(opacity=70);}
.override .link-btn { color: #fff; text-decoration: none; font-size: 13px; text-align: center; background: url('../img/btn-bg.jpg') repeat-x; display: inline-block; line-height: 27px; height: 27px; padding: 0 16px; margin: 13px 0; text-transform: uppercase; border-radius: 4px; }
.override .link-btn:hover { background: url('../img/btn-bg-reverse.jpg') repeat-x; }
.override hr { border-top: 1px solid #003333; }

.override .carousel-control { width: 0; }
.override .carousel-control img { position: absolute; top: 45%; z-index: 5;}

@media screen and (max-width: 992px) {
	.override .desappear-992 { display: none; }
}

@media screen and (max-width: 768px) {
	.override .p-r-rm, .override .pl-r-rm { padding-right: 0; }
	.override .p-l-rm, .override .pl-l-rm { padding-left: 0; }
	.override .pl-lr-rm, .override .p-lr-rm { padding-right: 0; padding-left: 0; }
	.override .ml-l-rm, .override .m-l-rm { margin-left: 0; }  
	.override .ml-r-rm, .override .m-r-rm { margin-right: 0; } 
	.override .ml-lr-rm, .override .m-lr-rm { margin-right: 0; margin-left: 0;}
}

